# hermes

./: .gitignore  CMakeLists.txt  CMakeListsPrivate.txt  LICENSE  platformio.ini
include/: EmbeddedServer.h  Sprite.h  TFT_Config_custom.h  TouchButton.h  bitmap.h  elapsedMillis.h  global.h  renderer.h  rocket.h  server.h  sync.h  utils.h
include/fonts/: IndieFlower_Regular16pt7b.h  Pacifico_Regular20pt7b.h
include/renderers/: CatRenderer.h  plant.h  rain.h
rocket/: plant.rocket  rain.rocket
sim/: Adafruit_GFX.cpp  Adafruit_GFX.h  Adafruit_SSD1306.cpp  Adafruit_SSD1306.h  Arduino.cpp  Arduino.h  CMakeLists.txt  device.c  main.cpp  track.c
sim/modules/: FindSDL2.cmake
src/: Sprite.cpp  bitmap.h  device.c  main.cpp
